# trailing-edge

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  NOTABLE_CODE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trailingedge/: __init__.py  config.py  config_validator.py  logging_config.py  main.py
src/trailingedge/auth/: __init__.py  manager.py
src/trailingedge/indicators/: __init__.py  atr.py  donchian.py
src/trailingedge/notifications/: __init__.py  telegram.py
src/trailingedge/websocket/: __init__.py  account.py  account_stream.py  market_fetch.py  market_stream.py  orders.py
tests/: test_init.py  test_main_logic.py  test_state_transitions.py  test_websocket_reconnection.py
tests/auth/: test_manager.py
tests/notifications/: test_telegram_failures.py
tests/websocket/: test_market_fetch.py  test_orders.py
